# docs/swagger.json
@@ -1,18 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server celler server.",
-        "title": "Swagger Example API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
+        "title": "OTA server",
+        "contact": {},
         "version": "1.0"
     },
     "host": "localhost:8080",
@@ -20,6 +10,11 @@
     "paths": {
         "/bin/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get binary firmware file with given id",
                 "summary": "Get binary file",
                 "parameters": [
@@ -37,12 +32,29 @@
                         "schema": {
                             "type": "file"
                         }
+                    },
+                    "401": {
+                        "description": "Invalid auth token",
+                        "schema": {
+                            "$ref": "#/definitions/main.HttpError"
+                        }
+                    },
+                    "403": {
+                        "description": "Access is denied",
+                        "schema": {
+                            "$ref": "#/definitions/main.HttpError"
+                        }
                     }
                 }
             }
         },
         "/firmwares": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get all firmwares",
                 "produces": [
                     "application/json"
@@ -57,10 +69,27 @@
                                 "$ref": "#/definitions/main.ApiFirmwareResponse"
                             }
                         }
+                    },
+                    "401": {
+                        "description": "Invalid auth token",
+                        "schema": {
+                            "$ref": "#/definitions/main.HttpError"
+                        }
+                    },
+                    "403": {
+                        "description": "Access is denied",
+                        "schema": {
+                            "$ref": "#/definitions/main.HttpError"
+                        }
                     }
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get all firmwares",
                 "consumes": [
                     "application/json"
@@ -86,13 +115,30 @@
                         "schema": {
                             "$ref": "#/definitions/main.ApiFirmwareResponse"
                         }
+                    },
+                    "401": {
+                        "description": "Invalid auth token",
+                        "schema": {
+                            "$ref": "#/definitions/main.HttpError"
+                        }
+                    },
+                    "403": {
+                        "description": "Access is denied",
+                        "schema": {
+                            "$ref": "#/definitions/main.HttpError"
+                        }
                     }
                 }
             }
         },
         "/firmwares/latest": {
             "get": {
-                "description": "Get latest firmware version for given repo and tags",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get latest firmware version for given repo and tags. Available for boards.",
                 "produces": [
                     "application/json"
                 ],
@@ -116,6 +162,12 @@
                         "description": "ok",
                         "schema": {
                             "$ref": "#/definitions/main.ApiFirmwareResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Invalid auth token",
+                        "schema": {
+                            "$ref": "#/definitions/main.HttpError"
                         }
                     },
                     "404": {
@@ -221,8 +273,11 @@
             }
         }
     },
-    "externalDocs": {
-        "description": "OpenAPI",
-        "url": "https://swagger.io/resources/open-api/"
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "X-Token",
+            "in": "header"
+        }
     }
 }
